--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer components {
+  .text-shadow-white {
+    text-shadow:
+      -1px -1px 2px #fff,
+      1px -1px 2px #fff,
+      -1px 1px 2px #fff,
+      1px 1px 2px #fff;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .insert-center {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .insert-center-y {
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  .insert-center-y-full-left-x {
+    top: 50%;
+    transform: translate(-100%, -50%);
+  }
 }
