--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,10 +10,10 @@
       -1px 1px 2px #fff,
       1px 1px 2px #fff;
   }
-  .insert-center {
+  .inset-center {
     @apply left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
   }
-  .insert-center-y {
+  .inset-center-y {
     @apply top-1/2 -translate-y-1/2;
   }
 }
