--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,9 @@
   .inset-center-y {
     @apply top-1/2 -translate-y-1/2;
   }
+  .section-1-heading {
+    -webkit-text-stroke: 2px #fff;
+  }
   .section-6-heading {
     -webkit-text-stroke: 3px #ff720e;
   }
