--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,19 @@
     -webkit-text-stroke: 2px #fff;
   }
   .section-6-heading {
-    -webkit-text-stroke: 3px #ff720e;
+    -webkit-text-stroke: 4px #ff720e;
+  }
+  .section-7-heading {
+    text-shadow: 0px 0px 10px #ff720e;
+    -webkit-text-stroke: 3px #000;
+  }
+  .logo-text-gradient-green {
+    @apply animate-[gradient_4s_ease-in-out_infinite];
+    background: linear-gradient(to right, #3e8349, #357a37, #3e8349, #d9efa4);
+    color: transparent;
+    background-size: 300%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
   }
 }
