--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,3 +36,25 @@
     -webkit-text-fill-color: transparent;
   }
 }
+
+html {
+  font-size: 12px;
+}
+
+@media screen and (min-width: 375px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  html {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  html {
+    font-size: 16px;
+  }
+}
