--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@
     -webkit-text-stroke: 2px #fff;
   }
   .section-6-heading {
-    -webkit-text-stroke: 4px #ff720e;
+    -webkit-text-stroke: 0.175rem #ff720e;
   }
   .section-7-heading {
     text-shadow: 0px 0px 10px #ff720e;
